[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "andaluh"
version = "0.3.1"
description = "Transliterate español (spanish) spelling to andaluz proposals"
readme = "README.md"
authors = [
    {name = "J. Félix Ontañón", email = "andalugeeks@gmail.com"},
    {name = "Sergio Soto Núñez", email = "andalugeeks@gmail.com"},
]
license = "LGPL-3.0-or-later"
requires-python = ">=3.9"
classifiers = [
    "Topic :: Text Processing",
    "Topic :: Software Development :: Internationalization",
    "Natural Language :: Spanish",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://andaluh.es"
"Source Code" = "https://github.com/andalugeeks/andaluh-py"

[project.optional-dependencies]
dev = [
    "tox>=4.0.0",
    "pytest>=8.4.1",
    "pytest-cov",
    "coverage",
    "mock>=2.0.0",
    "flake8",
    "flake8-colors",
    "pep8-naming",
]

[tool.setuptools]
packages = ["andaluh"]
script-files = ["bin/andaluh"]

[tool.setuptools.package-dir]
"" = "."

# Configuración de pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=andaluh"
pythonpath = ["."]

# Configuración de coverage
[tool.coverage.run]
source = ["andaluh"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

# Configuración de flake8
[tool.flake8]
max-line-length = 80
ignore = ["D104", "D100", "D400", "I901", "I902", "D401", "W503"]
max-complexity = 10
per-file-ignores = [
    "andaluh/lib.py:W504",
    "setup.py:E121",
]

# Configuración de tox equivalente
[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39,py310,py311,py312,py313,lint

[testenv]
deps = 
    pytest>=8.4.1
    pytest-cov
    coverage
    mock>=2.0.0
commands = 
    pytest --cov=andaluh tests/

[testenv:lint]
deps = 
    flake8
    flake8-colors
    pep8-naming
commands = 
    flake8 andaluh/ bin/
""" 

# Configuración de commitizen
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.1"
version_files = [
    "pyproject.toml:version"
]
tag_format = "v$version"
update_changelog_on_bump = true 